welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:3: error: illegal start of simple pattern
	var = litMessage
            ^BDR2:4: error: '=' expected but ';' found.
	var match {
^BDR2:4: error: illegal start of simple pattern
	var match {
            ^BDR2:21: error: '=' expected but '}' found.
	}}
         ^